Changed to US map

--- a/map/src/css/style.css
+++ b/map/src/css/style.css
@@ -1,202 +1,9 @@
-html,
-body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    background-color: #081d33;
-    overflow: hidden;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+.counties {
+  fill: none;
 }
 
-#content {
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
-}
-
-.tooltip {
-    position: absolute;
-    padding: 1.2em;
-    font-size: 0.8em;
-    pointer-events: none;
-    background: #ffffff;
-    border-radius: 0.5em;
-    -moz-box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.4);
-    -webkit-box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.4);
-    box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.4);
-}
-
-.tooltip table {
-    margin: 0.8em 0 0 0;
-    padding: 0;
-}
-
-.tooltip td {
-    color: rgba(0, 0, 0, 0.8);
-}
-
-.tooltip .data {
-    text-align: right;
-}
-
-.tooltip p {
-    font-weight: bold;
-    color: rgba(0, 0, 0, 1);
-    margin: 0;
-    padding: 0;
-}
-
-#header {
-    background-color: rgba(0, 0, 0, 0.4);
-    border-radius: 0.5em;
-    position: absolute;
-    padding: 1.5em;
-    margin: 1em;
-    width: 25%;
-}
-
-.hidden {
-    visibility: hidden;
-    display: none;
-}
-
-#header h1,
-#header h2,
-#header h3,
-#header p {
-    color: #ffffff;
-    padding: 0;
-    margin: 0;
-}
-
-#header h1 {
-    font-size: 1.2em;
-    font-weight: bold;
-}
-
-#header h2 {
-    line-height: 1.6;
-    font-size: 0.8em;
-    font-weight: bold;
-    opacity: 0.4;
-}
-
-#header h3 {
-    margin: 3em 0 0 0;
-    font-size: 0.7em;
-    font-weight: bold;
-    opacity: 0.6;
-}
-
-#header .description {
-    margin: 1em 0 0 0;
-    font-size: 0.8em;
-    line-height: 1.4;
-    opacity: 0.8;
-}
-
-#header .sources {
-    margin: 2em 0 0 0;
-    margin: 0;
-}
-
-#header .sources a {
-    display: block;
-    margin: 0.2em 0;
-    font-size: 0.6em;
-    opacity: 0.4;
-}
-
-.wide {
-    width: 12em;
-}
-
-#legend text {
-    font-size: 0.8em;
-    opacity: 0.8;
-    color: #000000;
-    font-weight: 400;
-}
-
-a {
-    color: #ffffff;
-}
-
-#hide,
-#show {
-    font-size: 0.6em;
-    margin: 1em 0 0 0;
-    opacity: 0.4;
-}
-
-.slidecontainer {
-    position: absolute;
-    width: 96%;
-    margin: 0 2%;
-    bottom: 1%;
-}
-
-.slidecontainer h1 {
-    color: white;
-    text-align: right;
-    margin: 0;
-    padding: 0;
-    font-size: 1.4em;
-    font-weight: bold;
-    text-shadow: 1px 1px 10px rgba(0, 0, 0, 1);
-}
-
-.slider {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 100%;
-    background: rgba(255, 255, 255, 1);
-    border: 1px solid rgba(100, 100, 100, 1);
-    outline: none;
-    height: 4px;
-}
-
-.slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 0.8em;
-    height: 0.8em;
-    background-color: #cc4c02;
-    border: 2px solid #ffffff;
-    border-radius: 50%;
-    -webkit-transition: 0.1s;
-    box-shadow: 1px 1px 4px rgba(0, 0, 0, 1);
-}
-
-.slider::-moz-range-thumb {
-    width: 0.8em;
-    height: 0.8em;
-    background-color: #cc4c02;
-    border: 2px solid #ffffff;
-    border-radius: 50%;
-    transition: all 0.1s;
-    box-shadow: 1px 1px 4px rgba(0, 0, 0, 1);
-}
-
-.slider::-ms-track {
-    width: 0.8em;
-    height: 0.8em;
-    background-color: #cc4c02;
-    border: 2px solid #ffffff;
-    border-radius: 50%;
-    transition: all 0.1s;
-    box-shadow: 1px 1px 4px rgba(0, 0, 0, 1);
-}
-
-#preloader {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    margin-left: -150px;
+.states {
+  fill: none;
+  stroke: #fff;
+  stroke-linejoin: round;
 }
