--- a/map/src/css/style.css
+++ b/map/src/css/style.css
@@ -9,5 +9,28 @@
 }
 
 #map {
-  margin: 0 auto;
+  margin: auto;
+  width: 50%;
+}
+
+h1,
+h2,
+h3 {
+  text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+h1 {
+  color: #222222;
+}
+
+h3 {
+  color: #666666;
+}
+
+h1,
+h3 {
+  margin: 0;
+  padding: 0;
 }
