Added colors and hover

--- a/map/src/css/style.css
+++ b/map/src/css/style.css
@@ -1,36 +1,108 @@
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  background-color: #444444;
+  overflow: hidden;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
 .counties {
   fill: none;
+  stroke: #444444;
+  stroke-linejoin: round;
+  cursor: pointer;
 }
 
 .states {
   fill: none;
-  stroke: #fff;
-  stroke-linejoin: round;
 }
 
 #map {
   margin: auto;
-  width: 50%;
+  margin-top: 60px;
+  width: 100%;
+}
+
+#graph {
+  margin-top: 30px;
+  display: block;
+  margin: auto;
+  margin-top: 60px;
 }
 
 h1,
 h2,
 h3 {
   text-align: center;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 h1 {
-  color: #222222;
+  color: #ffffff;
 }
 
 h3 {
-  color: #666666;
+  color: #aaaaaa;
 }
 
 h1,
 h3 {
   margin: 0;
   padding: 0;
+}
+
+.tooltip {
+  position: absolute;
+  padding: 1.2em;
+  font-size: 0.8em;
+  pointer-events: none;
+  background: #ffffff;
+  border-radius: 0.5em;
+  -moz-box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.4);
+}
+
+.tooltip table {
+  margin: 0.8em 0 0 0;
+  padding: 0;
+}
+
+.tooltip td {
+  color: rgba(0, 0, 0, 0.8);
+}
+
+.tooltip .data {
+  text-align: right;
+}
+
+.tooltip p {
+  font-weight: bold;
+  color: rgba(0, 0, 0, 1);
+  margin: 0;
+  padding: 0;
+}
+
+#preloader {
+  position: absolute;
+  left: 50%;
+  top: 300px;
+  margin-left: -110px;
+}
+
+.number {
+  text-align: right;
+  font-weight: bold;
+}
+
+.label {
+  padding-left: 8px;
 }
