--- a/map/src/css/style.css
+++ b/map/src/css/style.css
@@ -4,15 +4,14 @@ body {
   padding: 0;
   height: 100%;
   background-color: #444444;
-  overflow: hidden;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .counties {
@@ -28,13 +27,33 @@ body {
 
 #map {
   margin: auto;
-  margin-top: 60px;
+  margin-top: 30px;
   width: 100%;
+  overflow: auto;
+}
+
+#legend {
+  margin: auto;
+  display: block;
+  margin-top: 60px;
+}
+
+.legend-text {
+  fill: white;
+  font-size: 0.8em;
+  font-weight: bold;
+}
+
+.legend-subtext {
+  fill: white;
+  font-size: 0.6em;
 }
 
 #graph {
   display: block;
+  height: 800px;
   margin: auto;
+  margin-top: -45px;
 }
 
 h1,
@@ -92,7 +111,7 @@ h3 {
 #preloader {
   position: absolute;
   left: 50%;
-  top: 300px;
+  top: 220px;
   margin-left: -110px;
 }
 
