--- a/map/src/css/style.css
+++ b/map/src/css/style.css
@@ -10,8 +10,8 @@ body {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .counties {
@@ -58,7 +58,8 @@ body {
 
 h1,
 h2,
-h3 {
+h3,
+h4 {
   text-align: center;
 }
 
@@ -70,8 +71,14 @@ h3 {
   color: #aaaaaa;
 }
 
+h4 {
+  color: #222222;
+  font-size: 1.3em;
+}
+
 h1,
-h3 {
+h3,
+h4 {
   margin: 0;
   padding: 0;
 }
@@ -103,8 +110,8 @@ h3 {
 
 .tooltip p {
   font-weight: bold;
-  color: rgba(0, 0, 0, 1);
-  margin: 0;
+  color: #444444;
+  margin: 1em, 0, 0, 0;
   padding: 0;
 }
 
